--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,14 +15,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse scrollspy" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a class="scroll" href="/index.html#top">Início</a></li>
+                <li><a class="scroll" href="/">Início</a></li>
                 <li><a class="scroll" href="/index.html#about">Sobre</a></li>
                 <li><a class="scroll" href="/index.html#treatments">Tratamentos</a></li>
                 <!-- <li><a class="scroll" href="#team">Team</a></li> -->
                 <!-- <li><a class="scroll" href="#testimonials">Testimonials</a></li> -->
                 <li><a class="scroll" href="/index.html#gallery">Pacientes</a></li>
                 <li><a class="scroll" href="/index.html#location">Localização</a></li>
-                <li><a href="/blog/">Blog</a></li>
+                <li><a class="scroll" href="/blog/">Blog</a></li>
             </ul>
         </div>
     </div>
