--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,13 @@
         </ul>
 
         <small>{% if site.copyright %} {{ site.copyright }} {% endif %}</small>
-
+	<br>
+	<small> Tema Dentistsmile por Obaez</small>
     </div>
 </footer>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MWCRV5W"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- End Footer -->
