--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,9 +22,16 @@
                 <!-- <li><a class="scroll" href="#testimonials">Testimonials</a></li> -->
  <!--               <li><a class="scroll" href="/index.html#gallery">Pacientes</a></li> -->
                 <li><a class="scroll" href="/index.html#location">Localização</a></li>
-                <li><a class="scroll" href="/blog/">Blog</a></li>
+                <!-- <li><a class="scroll" href="/blog/">Blog</a></li> -->
             </ul>
         </div>
     </div>
 </nav>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MWCRV5W');</script>
+<!-- End Google Tag Manager -->
 <!-- End Header -->
