--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,8 @@
                 <!-- <li><a class="scroll" href="#team">Team</a></li> -->
                 <!-- <li><a class="scroll" href="#testimonials">Testimonials</a></li> -->
  <!--               <li><a class="scroll" href="/index.html#gallery">Pacientes</a></li> -->
-<!--                 <li><a class="scroll" href="/index.html#location">Localização</a></li>
- -->                <!-- <li><a class="scroll" href="/blog/">Blog</a></li> -->
+                <li><a class="scroll" href="/index.html#location">Localização</a></li>
+                <!-- <li><a class="scroll" href="/blog/">Blog</a></li> -->
             </ul>
         </div>
     </div>
