--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                 <!-- <li><a class="scroll" href="#testimonials">Testimonials</a></li> -->
  <!--               <li><a class="scroll" href="/index.html#gallery">Pacientes</a></li> -->
                 <li><a class="scroll" href="/index.html#location">Localização</a></li>
-                <!-- <li><a class="scroll" href="/blog/">Blog</a></li> -->
+                <li><a class="scroll" href="/blog/">Blog</a></li>
             </ul>
         </div>
     </div>
