--- a/_includes/doctype-head.html
+++ b/_includes/doctype-head.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC8P3QkrWECaI_jljUalM8FrH2YltiC7ew"></script>
+
     {% if site.google-verification %}
     <meta name="google-site-verification" content="{{ site.google_verification }}">
     {% endif %}
